# teeheesmart

./: .envrc  .gitignore  .tool-versions  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
script/: build  publish  publish_test  setup  test
src/teeheesmart/: __init__.py  constants.py  media_switch.py  url_parser.py
src/teeheesmart/hex/: __init__.py  io.py  media_switch.py
tests/: url_parser_test.py
tests/hex/: fakes.py  io_test.py  media_switch_test.py
