[project]
name = "teeheesmart"
version = "0.9.0"
authors = [
  { name = "Kevin Rohrbaugh", email="code@rhrbgh.com" },
]
description = "API for controlling a TESmart media switch using Hex protocol"
keywords = ["home assistant", "home automation", "tesmart", "hdmi", "video"]
readme = "README.md"
requires-python = ">= 3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/krohrbaugh/teeheesmart"
"Bug Tracker" = "https://github.com/krohrbaugh/teeheesmart/issues"

[build-system]
requires = [
  "hatchling>=1.20.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teeheesmart"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
  "tests",
]
